# Multicore_Video_processing

./: CMakeLists.txt  README.md  contour_with_cuda.cpp  contour_with_cv  contour_with_cv.cpp  contour_with_cv.py  contour_without_cv.py  deviceQuery  device_props  device_props.cu  edge_detection  edge_detection.cpp  main.cu  test.py  test1.cu  test_without_cv.py
